--- a/Source/unit1.lfm
+++ b/Source/unit1.lfm
@@ -3006,6 +3006,17 @@ object Form1: TForm1
   object PopupMenuTrayIcon: TPopupMenu
     left = 47
     top = 336
+    object MenuItem18: TMenuItem
+      Caption = 'Show'
+      OnClick = MenuItem18Click
+    end
+    object MenuItem17: TMenuItem
+      Caption = 'Hide'
+      OnClick = MenuItem17Click
+    end
+    object MenuItem16: TMenuItem
+      Caption = '-'
+    end
     object MenuItem13: TMenuItem
       Caption = 'Stop'
       OnClick = MenuItemStopClick
