--- a/Source/unit1.lfm
+++ b/Source/unit1.lfm
@@ -632,6 +632,8 @@ object Form1: TForm1
             'procedure waitNotColorHexPositionPix(x,y: Integer; hex:String);'
             'procedure waitNotColorHexPositionPix2(x,y: Integer; hex:String; x2,y2: Integer; hex2:String);'
             'function play(x1,y1: Integer; c1:String; x2,y2: Integer; c2:String; x,y:Integer):Boolean;'
+            'procedure ExecAndContinue(sExe, sFile: string)'
+            'function KillTask(ExeFileName: string): Integer;'
           )
           OnSelect = ComboBoxCodeSelect
           Style = csDropDownList
