--- a/Source/unit1.lfm
+++ b/Source/unit1.lfm
@@ -638,6 +638,7 @@ object Form1: TForm1
             'procedure WriteInFile(Filename, txt: string);'
             'function makeDir(path:string):Boolean;''); '
             'procedure MouseMove(x,y: Integer);'
+            'procedure MouseMoveRelative(x,y: Integer);'
             'procedure MouseDown();'
             'procedure MouseUp();'
           )
