--- a/Source/unit1.lfm
+++ b/Source/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 162
+  Left = 201
   Height = 525
-  Top = 123
+  Top = 119
   Width = 817
   Caption = 'Pascal Script IDE v1.0'
   ClientHeight = 505
@@ -663,6 +663,7 @@ object Form1: TForm1
             'function HTTPClientMessage(ip: String; Port: Integer; Message: String):String; '
             'function HTTPClientGet(url: String):String;'
             'function WGet(url, destination: String; timeout: Integer):String;'
+            'function Replace(content, old, new: String):String;'
           )
           OnSelect = ComboBoxCodeSelect
           Style = csDropDownList
